jni/Rule_Implementor/rule_parsing_unit.output
Terminals unused in grammar

   T_NULL_PTR
   T_DIMENSIONS


Grammar

    0 $accept: Rule_Implementor $end

    1 Rule_Implementor: State_Declaration_List Filter_List State_Specification_List T_END

    2 State_Declaration_List: State_Declaration
    3                       | State_Declaration_List State_Declaration

    4 State_Declaration: T_STATE ':' T_UPPERCASE_IDENTIFIER ';'
    5                  | T_STATE ':' T_UPPERCASE_IDENTIFIER State_Members ';'

    6 State_Specification_List: State_Specification
    7                         | State_Specification_List State_Specification

    8 State_Specification: T_IN T_STATE State_ID ':' Declaration_List

    9 State_Members: '{' Declaration_List '}'

   10 Filter_List: /* empty */
   11            | Filter_List Filter

   12 Filter: T_FILTER ':' T_FILTER_NAME Filter_Specification ';'

   13 Filter_Specification: T_FILTER_NAME
   14                     | '!' Filter_Specification
   15                     | '{' T_HAS ':' String_List '}'
   16                     | Filter_Specification T_AND Filter_Specification
   17                     | '{' Filter_Specification '}'

   18 String_List: T_STRING_CONSTANT
   19            | String_List ',' T_STRING_CONSTANT

   20 State_ID: T_UPPERCASE_IDENTIFIER
   21         | '*'

   22 Statement: Expression ';'
   23          | If_Statement
   24          | Declaration ';'
   25          | T_TRANSFER Expression_Wild ';'

   26 Test_Expression: T_IF '(' Expression ')'

   27 If_Statement: Test_Expression Statement_Block
   28             | Test_Expression Statement_Block T_ELSE Statement_Block
   29             | Test_Expression Statement_Block T_ELSE If_Statement
   30             | Test_Expression Expression '!' Expression ';'

   31 Statement_Block: '{' Statement_List '}'

   32 Statement_List: /* empty */
   33               | Statement_List Statement

   34 Declaration_List: /* empty */
   35                 | Declaration
   36                 | Declaration_List ',' Declaration

   37 Declaration: Variable_Declaration
   38            | Routine_Definition

   39 Routine_Definition: Type T_IDENTIFIER Bracketed_Declaration_List Statement_Block
   40                   | Type T_OVERRIDEN_FUNCTION Bracketed_Declaration_List Statement_Block

   41 Lambda_Expression: '[' Declaration_List ']' Statement_Block

   42 Bracketed_Declaration_List: '(' Declaration_List ')'

   43 Variable_Declaration: Type T_IDENTIFIER
   44                     | Type T_IDENTIFIER T_RIGHT_ARROW Expression
   45                     | Type T_IDENTIFIER T_LEFT_ARROW Expression

   46 Type: T_DOUBLE
   47     | T_INT
   48     | T_BOOL
   49     | T_VOID
   50     | T_STRING
   51     | '<' Type_Syntax_List '>'
   52     | T_EMPTY_TYPE_AGGREGATE

   53 Type_Syntax_List: Type
   54                 | Type_Syntax_List ',' Type

   55 Expression_Wild: /* empty */
   56                | Expression

   57 Expression: Assignment_Expression
   58           | Constant_Expression
   59           | LValue
   60           | Call
   61           | Aggregate_Value
   62           | Lambda_Expression
   63           | Expression '+' Expression
   64           | Expression '-' Expression
   65           | Expression '*' Expression
   66           | Expression '%' Expression
   67           | Expression '/' Expression
   68           | Expression '>' Expression
   69           | Expression '<' Expression
   70           | Expression T_GREATER_EQUAL Expression
   71           | Expression T_LESS_EQUAL Expression
   72           | Expression T_AND Expression
   73           | Expression T_OR Expression
   74           | Expression T_EQUAL Expression
   75           | Expression T_NOT_EQUAL Expression
   76           | '!' Expression
   77           | '-' Expression
   78           | T_INCREMENT Expression
   79           | T_DECREMENT Expression
   80           | '(' Expression ')'

   81 Assignment_Expression: LValue T_LEFT_ARROW Expression

   82 LValue: Field_Access_Expression

   83 Field_Access_Expression: T_IDENTIFIER
   84                        | T_UPPERCASE_IDENTIFIER
   85                        | Expression '.' T_IDENTIFIER
   86                        | T_SYSTEM_IDENTIFIER

   87 Call: T_IDENTIFIER '(' Expression_List_Wild ')'
   88     | T_OVERRIDEN_FUNCTION '<' State_ID '>' '(' Expression_List_Wild ')'
   89     | T_SYSTEM_IDENTIFIER '(' Expression_List_Wild ')'
   90     | T_FILTER_NAME '(' Expression_List_Wild ')'
   91     | Expression '.' T_IDENTIFIER '(' Expression_List_Wild ')'

   92 Aggregate_Value: T_AGGREGATE_OPEN Expression_List T_AGGREGATE_CLOSE

   93 Expression_List_Wild: /* empty */
   94                     | Expression_List

   95 Expression_List: Expression_List_Helper

   96 Expression_List_Helper: Expression
   97                       | Expression_List_Helper ',' Expression

   98 Constant_Expression: T_INTEGER_CONSTANT
   99                    | T_DOUBLE_CONSTANT
  100                    | T_BOOL_CONSTANT
  101                    | T_STRING_CONSTANT
  102                    | '$' '{' Identifier '}'

  103 Identifier: T_IDENTIFIER
  104           | T_UPPERCASE_IDENTIFIER
  105           | T_FILTER_NAME


Terminals, with rules where they appear

$end (0) 0
'!' (33) 14 30 76
'$' (36) 102
'%' (37) 66
'(' (40) 26 42 80 87 88 89 90 91
')' (41) 26 42 80 87 88 89 90 91
'*' (42) 21 65
'+' (43) 63
',' (44) 19 36 54 97
'-' (45) 64 77
'.' (46) 85 91
'/' (47) 67
':' (58) 4 5 8 12 15
';' (59) 4 5 12 22 24 25 30
'<' (60) 51 69 88
'>' (62) 51 68 88
'[' (91) 41
']' (93) 41
'{' (123) 9 15 17 31 102
'}' (125) 9 15 17 31 102
error (256)
T_VOID (258) 49
T_BOOL (259) 48
T_INT (260) 47
T_DOUBLE (261) 46
T_STRING (262) 50
T_FILTER (263) 12
T_HAS (264) 15
T_TRANSFER (265) 25
T_STATE (266) 4 5 8
T_NULL_PTR (267)
T_IN (268) 8
T_IF (269) 26
T_ELSE (270) 28 29
T_LEFT_ARROW (271) 45 81
T_RIGHT_ARROW (272) 44
T_EMPTY_TYPE_AGGREGATE (273) 52
T_END (274) 1
T_AGGREGATE_OPEN (275) 92
T_AGGREGATE_CLOSE (276) 92
T_IDENTIFIER (277) 39 43 44 45 83 85 87 91 103
T_UPPERCASE_IDENTIFIER (278) 4 5 20 84 104
T_FILTER_NAME (279) 12 13 90 105
T_SYSTEM_IDENTIFIER (280) 86 89
T_OVERRIDEN_FUNCTION (281) 40 88
T_STRING_CONSTANT (282) 18 19 101
T_INTEGER_CONSTANT (283) 98
T_DOUBLE_CONSTANT (284) 99
T_BOOL_CONSTANT (285) 100
T_OR (286) 73
T_AND (287) 16 72
T_NOT_EQUAL (288) 75
T_EQUAL (289) 74
T_GREATER_EQUAL (290) 70
T_LESS_EQUAL (291) 71
NEGATION (292)
T_DECREMENT (293) 79
T_INCREMENT (294) 78
T_DIMENSIONS (295)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
Rule_Implementor (61)
    on left: 1, on right: 0
State_Declaration_List (62)
    on left: 2 3, on right: 1 3
State_Declaration (63)
    on left: 4 5, on right: 2 3
State_Specification_List (64)
    on left: 6 7, on right: 1 7
State_Specification (65)
    on left: 8, on right: 6 7
State_Members (66)
    on left: 9, on right: 5
Filter_List (67)
    on left: 10 11, on right: 1 11
Filter (68)
    on left: 12, on right: 11
Filter_Specification (69)
    on left: 13 14 15 16 17, on right: 12 14 16 17
String_List (70)
    on left: 18 19, on right: 15 19
State_ID (71)
    on left: 20 21, on right: 8 88
Statement (72)
    on left: 22 23 24 25, on right: 33
Test_Expression (73)
    on left: 26, on right: 27 28 29 30
If_Statement (74)
    on left: 27 28 29 30, on right: 23 29
Statement_Block (75)
    on left: 31, on right: 27 28 29 39 40 41
Statement_List (76)
    on left: 32 33, on right: 31 33
Declaration_List (77)
    on left: 34 35 36, on right: 8 9 36 41 42
Declaration (78)
    on left: 37 38, on right: 24 35 36
Routine_Definition (79)
    on left: 39 40, on right: 38
Lambda_Expression (80)
    on left: 41, on right: 62
Bracketed_Declaration_List (81)
    on left: 42, on right: 39 40
Variable_Declaration (82)
    on left: 43 44 45, on right: 37
Type (83)
    on left: 46 47 48 49 50 51 52, on right: 39 40 43 44 45 53 54
Type_Syntax_List (84)
    on left: 53 54, on right: 51 54
Expression_Wild (85)
    on left: 55 56, on right: 25
Expression (86)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80, on right: 22 26 30 44 45 56 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 78 79 80 81 85 91 96 97
Assignment_Expression (87)
    on left: 81, on right: 57
LValue (88)
    on left: 82, on right: 59 81
Field_Access_Expression (89)
    on left: 83 84 85 86, on right: 82
Call (90)
    on left: 87 88 89 90 91, on right: 60
Aggregate_Value (91)
    on left: 92, on right: 61
Expression_List_Wild (92)
    on left: 93 94, on right: 87 88 89 90 91
Expression_List (93)
    on left: 95, on right: 92 94
Expression_List_Helper (94)
    on left: 96 97, on right: 95 97
Constant_Expression (95)
    on left: 98 99 100 101 102, on right: 58
Identifier (96)
    on left: 103 104 105, on right: 102


State 0

    0 $accept: . Rule_Implementor $end

    T_STATE  shift, and go to state 1

    Rule_Implementor        go to state 2
    State_Declaration_List  go to state 3
    State_Declaration       go to state 4


State 1

    4 State_Declaration: T_STATE . ':' T_UPPERCASE_IDENTIFIER ';'
    5                  | T_STATE . ':' T_UPPERCASE_IDENTIFIER State_Members ';'

    ':'  shift, and go to state 5


State 2

    0 $accept: Rule_Implementor . $end

    $end  shift, and go to state 6


State 3

    1 Rule_Implementor: State_Declaration_List . Filter_List State_Specification_List T_END
    3 State_Declaration_List: State_Declaration_List . State_Declaration

    T_STATE  shift, and go to state 1

    $default  reduce using rule 10 (Filter_List)

    State_Declaration  go to state 7
    Filter_List        go to state 8


State 4

    2 State_Declaration_List: State_Declaration .

    $default  reduce using rule 2 (State_Declaration_List)


State 5

    4 State_Declaration: T_STATE ':' . T_UPPERCASE_IDENTIFIER ';'
    5                  | T_STATE ':' . T_UPPERCASE_IDENTIFIER State_Members ';'

    T_UPPERCASE_IDENTIFIER  shift, and go to state 9


State 6

    0 $accept: Rule_Implementor $end .

    $default  accept


State 7

    3 State_Declaration_List: State_Declaration_List State_Declaration .

    $default  reduce using rule 3 (State_Declaration_List)


State 8

    1 Rule_Implementor: State_Declaration_List Filter_List . State_Specification_List T_END
   11 Filter_List: Filter_List . Filter

    T_FILTER  shift, and go to state 10
    T_IN      shift, and go to state 11

    State_Specification_List  go to state 12
    State_Specification       go to state 13
    Filter                    go to state 14


State 9

    4 State_Declaration: T_STATE ':' T_UPPERCASE_IDENTIFIER . ';'
    5                  | T_STATE ':' T_UPPERCASE_IDENTIFIER . State_Members ';'

    ';'  shift, and go to state 15
    '{'  shift, and go to state 16

    State_Members  go to state 17


State 10

   12 Filter: T_FILTER . ':' T_FILTER_NAME Filter_Specification ';'

    ':'  shift, and go to state 18


State 11

    8 State_Specification: T_IN . T_STATE State_ID ':' Declaration_List

    T_STATE  shift, and go to state 19


State 12

    1 Rule_Implementor: State_Declaration_List Filter_List State_Specification_List . T_END
    7 State_Specification_List: State_Specification_List . State_Specification

    T_IN   shift, and go to state 11
    T_END  shift, and go to state 20

    State_Specification  go to state 21


State 13

    6 State_Specification_List: State_Specification .

    $default  reduce using rule 6 (State_Specification_List)


State 14

   11 Filter_List: Filter_List Filter .

    $default  reduce using rule 11 (Filter_List)


State 15

    4 State_Declaration: T_STATE ':' T_UPPERCASE_IDENTIFIER ';' .

    $default  reduce using rule 4 (State_Declaration)


State 16

    9 State_Members: '{' . Declaration_List '}'

    T_VOID                  shift, and go to state 22
    T_BOOL                  shift, and go to state 23
    T_INT                   shift, and go to state 24
    T_DOUBLE                shift, and go to state 25
    T_STRING                shift, and go to state 26
    T_EMPTY_TYPE_AGGREGATE  shift, and go to state 27
    '<'                     shift, and go to state 28

    $default  reduce using rule 34 (Declaration_List)

    Declaration_List      go to state 29
    Declaration           go to state 30
    Routine_Definition    go to state 31
    Variable_Declaration  go to state 32
    Type                  go to state 33


State 17

    5 State_Declaration: T_STATE ':' T_UPPERCASE_IDENTIFIER State_Members . ';'

    ';'  shift, and go to state 34


State 18

   12 Filter: T_FILTER ':' . T_FILTER_NAME Filter_Specification ';'

    T_FILTER_NAME  shift, and go to state 35


State 19

    8 State_Specification: T_IN T_STATE . State_ID ':' Declaration_List

    T_UPPERCASE_IDENTIFIER  shift, and go to state 36
    '*'                     shift, and go to state 37

    State_ID  go to state 38


State 20

    1 Rule_Implementor: State_Declaration_List Filter_List State_Specification_List T_END .

    $default  reduce using rule 1 (Rule_Implementor)


State 21

    7 State_Specification_List: State_Specification_List State_Specification .

    $default  reduce using rule 7 (State_Specification_List)


State 22

   49 Type: T_VOID .

    $default  reduce using rule 49 (Type)


State 23

   48 Type: T_BOOL .

    $default  reduce using rule 48 (Type)


State 24

   47 Type: T_INT .

    $default  reduce using rule 47 (Type)


State 25

   46 Type: T_DOUBLE .

    $default  reduce using rule 46 (Type)


State 26

   50 Type: T_STRING .

    $default  reduce using rule 50 (Type)


State 27

   52 Type: T_EMPTY_TYPE_AGGREGATE .

    $default  reduce using rule 52 (Type)


State 28

   51 Type: '<' . Type_Syntax_List '>'

    T_VOID                  shift, and go to state 22
    T_BOOL                  shift, and go to state 23
    T_INT                   shift, and go to state 24
    T_DOUBLE                shift, and go to state 25
    T_STRING                shift, and go to state 26
    T_EMPTY_TYPE_AGGREGATE  shift, and go to state 27
    '<'                     shift, and go to state 28

    Type              go to state 39
    Type_Syntax_List  go to state 40


State 29

    9 State_Members: '{' Declaration_List . '}'
   36 Declaration_List: Declaration_List . ',' Declaration

    '}'  shift, and go to state 41
    ','  shift, and go to state 42


State 30

   35 Declaration_List: Declaration .

    $default  reduce using rule 35 (Declaration_List)


State 31

   38 Declaration: Routine_Definition .

    $default  reduce using rule 38 (Declaration)


State 32

   37 Declaration: Variable_Declaration .

    $default  reduce using rule 37 (Declaration)


State 33

   39 Routine_Definition: Type . T_IDENTIFIER Bracketed_Declaration_List Statement_Block
   40                   | Type . T_OVERRIDEN_FUNCTION Bracketed_Declaration_List Statement_Block
   43 Variable_Declaration: Type . T_IDENTIFIER
   44                     | Type . T_IDENTIFIER T_RIGHT_ARROW Expression
   45                     | Type . T_IDENTIFIER T_LEFT_ARROW Expression

    T_IDENTIFIER          shift, and go to state 43
    T_OVERRIDEN_FUNCTION  shift, and go to state 44


State 34

    5 State_Declaration: T_STATE ':' T_UPPERCASE_IDENTIFIER State_Members ';' .

    $default  reduce using rule 5 (State_Declaration)


State 35

   12 Filter: T_FILTER ':' T_FILTER_NAME . Filter_Specification ';'

    T_FILTER_NAME  shift, and go to state 45
    '!'            shift, and go to state 46
    '{'            shift, and go to state 47

    Filter_Specification  go to state 48


State 36

   20 State_ID: T_UPPERCASE_IDENTIFIER .

    $default  reduce using rule 20 (State_ID)


State 37

   21 State_ID: '*' .

    $default  reduce using rule 21 (State_ID)


State 38

    8 State_Specification: T_IN T_STATE State_ID . ':' Declaration_List

    ':'  shift, and go to state 49


State 39

   53 Type_Syntax_List: Type .

    $default  reduce using rule 53 (Type_Syntax_List)


State 40
